# programming

./: .gitignore  Main.java  Rough.java  Test1.java  _  _.cpp  _.js  _0_links.md  _0_notes.md  _1_cpp.md  _1_data_structure.md  _1_dsa.md  _1_notes.md  _1_rough.go  _2_algo_topic_wise.md  _2_algorithms.md  _2_ds_topic_wise.md  _2_system_design_links.md  _2_topic_wise.md  _3_cp_topic_wise.md  _3_data_structures.md  _3_low_level_design.md  _3_study_report.md  _4_low_level_design.md  _4_system_design_links.md  _50_day_challenge.md  _6_cp.md  _brush_up_in_golang.md  _conversion_in_golang.md  _cpp_to_golang_conversion.md  _daily_problems.md  _interview_problems.md  _lang_practice.md  _practice.txt  _revision.txt  _sub.md  _subs.md  _timeline.md  _topics.md  daily_activity.md  (+21 more)
_0_language/_1_cpp/cursor_cpp/: CMakeLists.txt  README.md  cursor_chat.md  learning_roadmap.md
_0_language/_1_cpp/cursor_cpp/exercises/: 01_variables_types_memory.cpp  02_pointers_references.cpp
_0_language/_1_cpp/cursor_cpp/lessons/: 01_variables_types_memory.md  02_pointers_references.md
_10_backtracking/: links.txt  rough  rough.cpp
_10_sorting/: _0_cpp_sort.cpp
_11_dp/: links.txt  notes.md
_12_dp/: more_resources.txt  notes.md
_12_greedy/: _2_fractional_knapsack.cpp  links.md  links.txt
_13_greedy/: _1_assign_cookies.cpp  _2_fractional_knapsack.cpp
_14_mathematics/: _smallest_even_multiples.cpp
_1_arrays/: _13_largest_subarray_with_zero_sum.cpp  _17_pascals_traingle_2.cpp  _18_count_inversions.cpp  _3_2sum.cpp  _8_longest_subarray_with_given_sum.cpp  notes.md
_1_arrays_go/: 03-2sum.go
_2021/: notes.md
_2_dataStructure/: links.md  (+1 more)
(+9348 files in other folders)
